fix(core): import de classe Collapses

--- a/packages/core/src/styles/_module.scss
+++ b/packages/core/src/styles/_module.scss
@@ -2,9 +2,7 @@
 /// Core Module
 /// @group core
 ////
-.test {
-  background: red;
-}
+
 @import 'reset/module';
 @import 'global/module';
 @import 'icons/module';
